--- a/index.html
+++ b/index.html
@@ -7,57 +7,27 @@
 </head>
 
 <link rel="stylesheet" href="index.css">
-
+<nav class="navbar" style="height: 50px; background-color: rgb(22, 22, 190); display: flex; justify-content: center; align-items: center;">My Hobbies and Interests
+</nav>
 <body>
     <div class="container">
         <div class="card">
-            <img src="head.jpg" width="100px" height="170px">
-            <h6><i>"HEAD OF FORBIDDEN JAHMAL"</i></h6>
+            <img src="462552905_1951970145287092_3471227380619295798_n.jpg" width="100px" height="170px">
+            <h6><i>Cleaning and maintaining my motorcycle</i></h6>
         </div>
         <div class="card">
-            <img src="hand 1.jpg" width="100px" height="170px">
-            <h6><i>"RIGHT HAND OF FORBIDDEN JAHMAL"</i></h6>
+            <img src="462564357_425617443701931_40199417001210124_n.jpg" width="100px" height="170px">
+            <h6><i>Cleaning and maintaining my motorcycle</i></h6>
         </div>
         <div class="card">
-            <img src="hand 2.jpg" width="100px" height="170px">
-            <h6><i>"LEFT HAND OF FORBIDDEN JAHMAL"</i></h6>
+            <img src="462570279_616501624278522_180355779120709986_n.jpg" width="100px" height="170px">
+            <h6><i>Riding and travelling with my motorcycle</i></h6>
         </div>
         <div class="card">
-            <img src="leg 1.jpg" width="100px" height="170px">
-            <h6><i>"RIGHT LEG OF FORBIDDEN JAHMAL"</i></h6>
+            <img src="462583291_1321702508833521_5593413280960622073_n.jpg" width="100px" height="170px">
+            <h6><i>Riding and travelling with my motorcycle</i></h6>
         </div>
-        <div class="card">
-            <img src="leg 2.jpg" width="100px" height="170px">
-            <h6><i>"LEFT LEG OF FORBIDDEN JAHMAL</i></h6>
-        </div>
-        <div class="card">
-            <img src="FULL BODY EXODIA.jpg" width="100px" height="170px">
-            <h4><strong>FULL BODY OF FORBIDDEN JAHMAL</strong></h4>
-        </div>
-        <div class="card">
-            <img src="hEAD (2).jpg" width="100px" height="170px">
-            <h6><i>"HEAD OF FORBIDDEN"</i></h6>
-        </div>
-        <div class="card">
-            <img src="Hand 1 (2).jpg" width="100px" height="170px">
-            <h6><i>"RIGHT HAND OF FORBIDDEN"</i></h6>
-        </div>
-        <div class="card">
-            <img src="HAND 2 (2).jpg" width="100px" height="170px">
-            <h6><i>"LEFT HAND OF FORBIDDEN"</i></h6>
-        </div>
-        <div class="card">
-            <img src="LEG 1 (2).jpg" width="100px" height="170px">
-            <h6><i>"RIGHT LEG OF FORBIDDEN"</i></h6>
-        </div>
-        <div class="card">
-            <img src="LEG 2 (2).jpg" width="100px" height="170px">
-            <h6><i>"LEFT LEG OF FORBIDDEN"</i></h6>
-        </div>
-        <div class="card">
-            <img src="FULL BODY PEDO.jpg" width="100px" height="150px">
-            <h6><strong>"FULL BODY OF FORBIDDEN PEDO"</strong></h6>
-        </div>
+
         
         
     </div>
